@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2004/02/23 01:58:41 xtraeme Exp $
+$NetBSD: distinfo,v 1.4 2004/04/25 15:49:57 minskim Exp $
 
-SHA1 (osh-040216.tar.gz) = faa372d7efda3e7235a5c5f1d1091c440841bef8
-Size (osh-040216.tar.gz) = 34235 bytes
+SHA1 (osh-040421.tar.gz) = acce1ea52d7ceec5b802bebbb1da900cbfb4745d
+Size (osh-040421.tar.gz) = 36508 bytes
